Cleaned some trash + wrote a model

--- a/Article.ipynb
+++ b/Article.ipynb
@@ -416,11 +416,328 @@
    ]
   },
   {
+   "source": [
+    "Таким образом, выборка по параметру max_force не содержит аномальных значений (выбросов). \n",
+    "Для построения модели машинного обучения способной предсказывать значения параметра max_force исходя из других известных параметров будет применена линейная регрессия. используемая в статистике регрессионная модель зависимости одной (объясняемой, зависимой) переменной y от другой или нескольких других переменных (факторов, регрессоров, независимых переменных) x с линейной функцией зависимости.\n",
+    "В общем виде ответ модели линейной регрессии будет описываться формулой \n",
+    "\n",
+    "$$ y = c_0 + c_1*x_1 + c_2*x_2 + ... + c_n*x_n$$\n",
+    "\n",
+    "Где:\n",
+    "* y - целевой признак, значение которого необходимо предсказать \n",
+    "* $ x_1 ... x_n $ - независимые переменные  \n",
+    "* $ c_1 ... c_n $ - коэффициенты регрессии при независимых членах \n",
+    "* $ c_0 $ - константа, интерцепт (intercept)\n",
+    "\n",
+    "Для реализации классической модели линейной регрессии предполагается, что отсутствует полная коллинеарность факторов, поэтому для построения модели предсказания зависимой переменной max_force будет использоваться исключительно значение признака section_value. \n",
+    "\n",
+    "Таким образом, интерпретация модели линейной регрессии будет заключаться в предсказании максимального значения допустимой нагрузки на образец из печатного пластика по размеру его поперечного сечения. \n",
+    "\n",
+    "Для корректного обучения модели машинного обучения имеющуюся выборку необходимо разделить на две части: тренировочную и тестовую. Модели необходимо обучиться на данных из тренировочной выборки, а качество модели будет проверяться на тестовой выборке. \n",
+    "В виду того, что варьируемые значения параметра - площадь поперечного сечения, имеет смысл определить в тренировочную выборку - все образцы, кроме образцов какого-то выбранного поперечного сечения. В данном случае было принято решение определить в тестовую выборку все образцы поперечным сечением 70 мм."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_data = experiment_data.drop(experiment_data[experiment_data.section_area == 70].index)\n",
+    "test_data = experiment_data.drop(experiment_data[experiment_data.section_area != 70].index)"
+   ]
+  },
+  {
+   "source": [
+    "Убедиться в правильности отбора экземпляров можно применив метод, отображающий последние 5 строк таблицы train_data:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     max_force  max_lenght  max_time  section_area  is_valid\n",
+       "6-5   1685.746    2.929033    175.74            60     False\n",
+       "6-6   1590.516    2.558533    153.51            60     False\n",
+       "6-7   1576.301    2.544567    152.67            60     False\n",
+       "6-8   1617.316    2.651033    159.06            60      True\n",
+       "6-9   1564.711    2.493233    149.59            60      True"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>max_force</th>\n      <th>max_lenght</th>\n      <th>max_time</th>\n      <th>section_area</th>\n      <th>is_valid</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>6-5</th>\n      <td>1685.746</td>\n      <td>2.929033</td>\n      <td>175.74</td>\n      <td>60</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>6-6</th>\n      <td>1590.516</td>\n      <td>2.558533</td>\n      <td>153.51</td>\n      <td>60</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>6-7</th>\n      <td>1576.301</td>\n      <td>2.544567</td>\n      <td>152.67</td>\n      <td>60</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>6-8</th>\n      <td>1617.316</td>\n      <td>2.651033</td>\n      <td>159.06</td>\n      <td>60</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>6-9</th>\n      <td>1564.711</td>\n      <td>2.493233</td>\n      <td>149.59</td>\n      <td>60</td>\n      <td>True</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 61
+    }
+   ],
+   "source": [
+    "train_data.tail()"
+   ]
+  },
+  {
+   "source": [
+    "Убедимся, что таблица с данными для теста содержит правильные значения: "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "      max_force  max_lenght  max_time  section_area  is_valid\n",
+       "7-1    1865.088    2.910867    174.65            70      True\n",
+       "7-10   1829.489    3.002200    180.13            70     False\n",
+       "7-2    1815.942    2.866867    172.01            70     False\n",
+       "7-3    1891.834    2.960033    177.60            70      True\n",
+       "7-4    1828.607    2.729533    163.77            70     False"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>max_force</th>\n      <th>max_lenght</th>\n      <th>max_time</th>\n      <th>section_area</th>\n      <th>is_valid</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>7-1</th>\n      <td>1865.088</td>\n      <td>2.910867</td>\n      <td>174.65</td>\n      <td>70</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>7-10</th>\n      <td>1829.489</td>\n      <td>3.002200</td>\n      <td>180.13</td>\n      <td>70</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>7-2</th>\n      <td>1815.942</td>\n      <td>2.866867</td>\n      <td>172.01</td>\n      <td>70</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>7-3</th>\n      <td>1891.834</td>\n      <td>2.960033</td>\n      <td>177.60</td>\n      <td>70</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>7-4</th>\n      <td>1828.607</td>\n      <td>2.729533</td>\n      <td>163.77</td>\n      <td>70</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 63
+    }
+   ],
+   "source": [
+    "test_data.head()"
+   ]
+  },
+  {
+   "source": [
+    "Теперь согласно общепринятому формату необходимо записать значени целевой переменной max_force в переменную y_train, а значение целевого признака в переменную X_test. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = train_data.max_force\n",
+    "X_train = train_data.section_area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3-1      922.5591\n",
+       "3-10     871.8252\n",
+       "3-2      879.5913\n",
+       "3-3      831.2734\n",
+       "3-4      810.5214\n",
+       "3-5      826.3668\n",
+       "3-6      834.9133\n",
+       "3-7      907.3512\n",
+       "3-8      926.6042\n",
+       "3-9      871.9587\n",
+       "4-1     1032.5860\n",
+       "4-2     1000.3650\n",
+       "5-1     1406.2260\n",
+       "5-10    1385.7630\n",
+       "5-2     1308.4440\n",
+       "5-3     1337.1210\n",
+       "5-4     1458.0350\n",
+       "5-5     1391.2260\n",
+       "5-6     1357.4710\n",
+       "5-7     1414.9570\n",
+       "5-8     1367.8680\n",
+       "5-9     1360.9350\n",
+       "6-1     1636.9440\n",
+       "6-10    1591.7410\n",
+       "6-2     1672.6140\n",
+       "6-3     1667.0530\n",
+       "6-4     1734.7430\n",
+       "6-5     1685.7460\n",
+       "6-6     1590.5160\n",
+       "6-7     1576.3010\n",
+       "6-8     1617.3160\n",
+       "6-9     1564.7110\n",
+       "Name: max_force, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 71
+    }
+   ],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3-1     30\n",
+       "3-10    30\n",
+       "3-2     30\n",
+       "3-3     30\n",
+       "3-4     30\n",
+       "3-5     30\n",
+       "3-6     30\n",
+       "3-7     30\n",
+       "3-8     30\n",
+       "3-9     30\n",
+       "4-1     40\n",
+       "4-2     40\n",
+       "5-1     50\n",
+       "5-10    50\n",
+       "5-2     50\n",
+       "5-3     50\n",
+       "5-4     50\n",
+       "5-5     50\n",
+       "5-6     50\n",
+       "5-7     50\n",
+       "5-8     50\n",
+       "5-9     50\n",
+       "6-1     60\n",
+       "6-10    60\n",
+       "6-2     60\n",
+       "6-3     60\n",
+       "6-4     60\n",
+       "6-5     60\n",
+       "6-6     60\n",
+       "6-7     60\n",
+       "6-8     60\n",
+       "6-9     60\n",
+       "Name: section_area, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 72
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "source": [
+    "Для построения модели линейной регрессии воспользуемся библиотекой statsmodels. Импортируем библиотеку: "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsmodels.api as sm "
+   ]
+  },
+  {
+   "source": [
+    "Для корректного завершения построения модели к целевому признаку необходимо добавить столбец с константой: "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = sm.add_constant(X_train) # adding a constant"
+   ]
+  },
+  {
+   "source": [
+    "Запустим обучение и построение модели линейной регрессии на отобранных признаках: "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regression = sm.OLS(y_train, X_train).fit()"
+   ]
+  },
+  {
+   "source": [
+    "Вывести всю необходимую информацию о полученной модели можно выполнив следующую команду: "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:              max_force   R-squared:                       0.975\n",
+       "Model:                            OLS   Adj. R-squared:                  0.974\n",
+       "Method:                 Least Squares   F-statistic:                     1173.\n",
+       "Date:                Tue, 13 Jul 2021   Prob (F-statistic):           1.31e-25\n",
+       "Time:                        17:01:56   Log-Likelihood:                -170.76\n",
+       "No. Observations:                  32   AIC:                             345.5\n",
+       "Df Residuals:                      30   BIC:                             348.5\n",
+       "Df Model:                           1                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "================================================================================\n",
+       "                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "--------------------------------------------------------------------------------\n",
+       "const           83.1077     36.026      2.307      0.028       9.532     156.683\n",
+       "section_area    25.7988      0.753     34.250      0.000      24.260      27.337\n",
+       "==============================================================================\n",
+       "Omnibus:                        0.127   Durbin-Watson:                   1.353\n",
+       "Prob(Omnibus):                  0.938   Jarque-Bera (JB):                0.340\n",
+       "Skew:                          -0.060   Prob(JB):                        0.844\n",
+       "Kurtosis:                       2.509   Cond. No.                         188.\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "\"\"\""
+      ],
+      "text/html": "<table class=\"simpletable\">\n<caption>OLS Regression Results</caption>\n<tr>\n  <th>Dep. Variable:</th>        <td>max_force</td>    <th>  R-squared:         </th> <td>   0.975</td>\n</tr>\n<tr>\n  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.974</td>\n</tr>\n<tr>\n  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   1173.</td>\n</tr>\n<tr>\n  <th>Date:</th>             <td>Tue, 13 Jul 2021</td> <th>  Prob (F-statistic):</th> <td>1.31e-25</td>\n</tr>\n<tr>\n  <th>Time:</th>                 <td>17:01:56</td>     <th>  Log-Likelihood:    </th> <td> -170.76</td>\n</tr>\n<tr>\n  <th>No. Observations:</th>      <td>    32</td>      <th>  AIC:               </th> <td>   345.5</td>\n</tr>\n<tr>\n  <th>Df Residuals:</th>          <td>    30</td>      <th>  BIC:               </th> <td>   348.5</td>\n</tr>\n<tr>\n  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>     <td> </td>   \n</tr>\n<tr>\n  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n</tr>\n</table>\n<table class=\"simpletable\">\n<tr>\n        <td></td>          <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n</tr>\n<tr>\n  <th>const</th>        <td>   83.1077</td> <td>   36.026</td> <td>    2.307</td> <td> 0.028</td> <td>    9.532</td> <td>  156.683</td>\n</tr>\n<tr>\n  <th>section_area</th> <td>   25.7988</td> <td>    0.753</td> <td>   34.250</td> <td> 0.000</td> <td>   24.260</td> <td>   27.337</td>\n</tr>\n</table>\n<table class=\"simpletable\">\n<tr>\n  <th>Omnibus:</th>       <td> 0.127</td> <th>  Durbin-Watson:     </th> <td>   1.353</td>\n</tr>\n<tr>\n  <th>Prob(Omnibus):</th> <td> 0.938</td> <th>  Jarque-Bera (JB):  </th> <td>   0.340</td>\n</tr>\n<tr>\n  <th>Skew:</th>          <td>-0.060</td> <th>  Prob(JB):          </th> <td>   0.844</td>\n</tr>\n<tr>\n  <th>Kurtosis:</th>      <td> 2.509</td> <th>  Cond. No.          </th> <td>    188.</td>\n</tr>\n</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+     },
+     "metadata": {},
+     "execution_count": 80
+    }
+   ],
+   "source": [
+    "regression.summary()"
+   ]
   },
   {
    "cell_type": "code",
